@@ -134,3 +134,25 @@ but not encoding.  If Werkzeug encounters an encoding error it will raise a
 :exc:`UnicodeEncodeError`.  It's your responsibility to not create data that is
 not present in the target charset (a non issue with all unicode encodings
 such as utf-8).
+
+.. _filesystem-encoding:
+
+The Filesystem
+==============
+
+.. versionchanged:: 0.11
+
+Up until version 0.11, Werkzeug used Python's stdlib functionality to detect
+the filesystem encoding. However, several bug reports against Werkzeug have
+shown that the value of :py:func:`sys.getfilesystemencoding` can not the
+trusted under traditional UNIX systems. The usual problems come from
+misconfigured systems, where ``LANG`` and similar environment variables are not
+set. In such cases, Python would default to ASCII as filesystem encoding, a
+very conservative default that is usually wrong and causes more problems than
+it avoids.
+
+Therefore Werkzeug will force the filesystem encoding to ``UTF-8`` and issue a
+warning whenever it detects that it is running under BSD or Linux, and
+:py:func:`sys.getfilesystemencoding` is returning an ASCII encoding.
+
+See also :py:mod:`werkzeug.filesystem`.
