@@ -53,7 +53,6 @@ r"""
 """
 import re
 import os
-import sys
 import tempfile
 from os import path
 from time import time
@@ -66,6 +65,7 @@ from werkzeug.utils import dump_cookie, parse_cookie
 from werkzeug.wsgi import ClosingIterator
 from werkzeug.posixemulation import rename
 from werkzeug._compat import PY2, text_type
+from werkzeug.filesystem import get_filesystem_encoding
 
 
 _sha1_re = re.compile(r'^[a-f0-9]{40}$')
@@ -223,7 +223,7 @@ class FilesystemSessionStore(SessionStore):
         self.path = path
         if isinstance(filename_template, text_type) and PY2:
             filename_template = filename_template.encode(
-                sys.getfilesystemencoding() or 'utf-8')
+                get_filesystem_encoding())
         assert not filename_template.endswith(_fs_transaction_suffix), \
             'filename templates may not end with %s' % _fs_transaction_suffix
         self.filename_template = filename_template
@@ -235,7 +235,7 @@ class FilesystemSessionStore(SessionStore):
         # you might reconfigure the session object to have a more
         # arbitrary string.
         if isinstance(sid, text_type) and PY2:
-            sid = sid.encode(sys.getfilesystemencoding() or 'utf-8')
+            sid = sid.encode(get_filesystem_encoding())
         return path.join(self.path, self.filename_template % sid)
 
     def save(self, session):
